# julianmontez.com

./: .gitignore  AGENTS.md  HANDOFF.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: deploy.yml
blog/: README.md  __init__.py  config.toml  generate.py  robots.txt  theme.css
blog/posts/2018/08/: 2018-08-12-DSC_0956.md
blog/posts/2019/06/: 2019-06-03-DSC_1620.md
blog/posts/2019/12/: 2019-12-23-DSC_1969.md
blog/posts/2022/02/: 2022-02-20-DSC_2720.md
blog/posts/2022/04/: 2022-04-17-DSC_2727.md
blog/posts/2022/08/: 2022-08-31-DSC_2760.md
blog/posts/2023/03/: 2023-03-09-DSC_2789.md
blog/posts/2024/06/: 2024-06-02-DSC_0094.md
blog/posts/2024/10/: 2024-10-12-DSC_0146.md
blog/posts/2025/01/: 2025-01-10-post-03.md  2025-01-15-post-02.md  2025-01-20-post-01.md
blog/posts/2025/12/: 2025-12-06-DSC_0389.md
blog/templates/: base.html  index.html  post.html
scripts/: import_lightroom.py
tests/: test_generate.py
