[project]
name = "julianmontez.com"
version = "0.1.0"
description = "Personal website, photoblog"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "markdown>=3.6",
    "pillow>=10.4",
    "ruff>=0.6.5",
]

[project.scripts]
generate-blog = "blog.generate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["blog"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
